syntax = "proto3";
package netty;
option java_package = "com.lwm.chapter8.protobuf";
option java_outer_classname = "SubscribeRequestProto";

message SubscribeRequest {
    int32 subReqID = 1;
    string userName = 2;
    string productName = 3;
    repeated string address = 4;
}