syntax = "proto3";
package netty;
option java_package = "com.lwm.chapter8.protobuf";
option java_outer_classname = "SubscribeResponseProto";

message SubscribeResponse {
    int32 subReqID = 1;
    int32 respCode = 2;
    string desc = 3;
}